--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "swiper": "^8.4.4",
         "typescript": "^4.8.4",
         "web-vitals": "^2.1.4",
+        "xlsx": "^0.18.5",
         "yup": "^0.32.11"
     },
     "devDependencies": {
