--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@fullcalendar/timegrid": "^6.0.0",
         "@mantine/core": "^5.10.5",
         "@mantine/hooks": "^5.10.5",
+        "@mui/icons-material": "^6.0.2",
         "@mui/material": "^6.0.2",
         "@popperjs/core": "^2.11.6",
         "@reduxjs/toolkit": "^1.8.5",
@@ -37,10 +38,13 @@
         "formik": "^2.2.9",
         "highlight.js": "^11.6.0",
         "mantine-datatable": "^1.7.17",
+        "moment": "^2.30.1",
         "nouislider-react": "^3.4.1",
         "react": "^18.2.0",
         "react-18-image-lightbox": "^5.1.4",
         "react-apexcharts": "^1.4.0",
+        "react-big-calendar": "^1.13.4",
+        "react-calendar": "^5.0.0",
         "react-click-away-listener": "^2.2.2",
         "react-copy-to-clipboard": "^5.1.0",
         "react-countup": "^6.3.2",
@@ -49,6 +53,7 @@
         "react-flatpickr": "^3.10.13",
         "react-images-uploading": "^3.1.7",
         "react-loading": "^2.0.3",
+        "react-moment": "^1.1.3",
         "react-popper": "^2.3.0",
         "react-quill": "^2.0.0",
         "react-redux": "^8.0.4",
@@ -72,6 +77,7 @@
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/typography": "^0.5.7",
         "@types/react": "^18.0.27",
+        "@types/react-big-calendar": "^1.8.10",
         "@types/react-copy-to-clipboard": "^5.0.4",
         "@types/react-dom": "^18.0.10",
         "@types/react-flatpickr": "^3.8.8",
