--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "react-dom": "^18.2.0",
         "react-export-table-to-excel": "^1.0.6",
         "react-flatpickr": "^3.10.13",
+        "react-icons": "^5.3.0",
         "react-images-uploading": "^3.1.7",
         "react-loading": "^2.0.3",
         "react-moment": "^1.1.3",
