--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_BACKEND_URL=http://localhost:4000
-# VITE_BACKEND_URL= https://api.lms.tecnavis.com
+# VITE_BACKEND_URL=http://localhost:4000
+VITE_BACKEND_URL= https://api.lms.tecnavis.com
