--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "@mantine/core": "^5.10.5",
         "@mantine/hooks": "^5.10.5",
         "@mui/icons-material": "^6.0.2",
-        "@mui/material": "^6.0.2",
+        "@mui/material": "^6.1.2",
+        "@mui/x-date-pickers": "^7.19.0",
         "@popperjs/core": "^2.11.6",
         "@reduxjs/toolkit": "^1.8.5",
         "@testing-library/jest-dom": "^5.16.5",
@@ -34,6 +35,7 @@
         "@x1mrdonut1x/nouislider-react": "^3.4.3",
         "apexcharts": "^3.37.1",
         "axios": "^1.7.3",
+        "dayjs": "^1.11.13",
         "easymde": "^2.18.0",
         "formik": "^2.2.9",
         "highlight.js": "^11.6.0",
@@ -48,6 +50,7 @@
         "react-click-away-listener": "^2.2.2",
         "react-copy-to-clipboard": "^5.1.0",
         "react-countup": "^6.3.2",
+        "react-datetime-picker": "^6.0.1",
         "react-dom": "^18.2.0",
         "react-export-table-to-excel": "^1.0.6",
         "react-flatpickr": "^3.10.13",
@@ -60,7 +63,7 @@
         "react-redux": "^8.0.4",
         "react-router-dom": "^6.4.2",
         "react-scripts": "5.0.1",
-        "react-select": "^5.5.8",
+        "react-select": "^5.8.1",
         "react-simplemde-editor": "^5.2.0",
         "react-sortablejs": "^6.1.4",
         "react-text-mask": "^5.5.0",
